tests/NormalTests/paczka1/fuzzy1/30156143.err
Error in line 13: A61 A61 90,8
Error in line 12: mb7 S108 58,1
Error in line 20: &w&1bD86E4 S108 77,8
Error in line 21: GCwQ AM53 13,1
Error in line 25: GCwQ S108 59,1
